--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
     "vue": "^3.5.13",
+    "vue-3d-loader": "^2.2.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
